--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
     </main>
     <footer>
-        <small>CENTRO Diseño, Cine y Televisión 2025</small>
+        <small>Caetana Prieto Muzzachiodi</small>
     </footer>
 </body>
 </html>
